# discord-target-replier

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Config.cpp  Config.h  README.md  config.example.json  main.cpp  vcpkg.json
.github/workflows/: release.yml
